--- a/accueil.css
+++ b/accueil.css
@@ -8,6 +8,7 @@ html {
 body {
 	color: #EDF7FC;
 	margin: 0;
+	overflow: hidden;
 }
 
 h2 {
@@ -80,4 +81,9 @@ h4 {
 	position: fixed;
 	text-align: center;
 	width: 100%;
+}
+
+video {
+  width: 100%;
+  height: 80%;
 }
