--- a/accueil.css
+++ b/accueil.css
@@ -26,15 +26,20 @@ h4 {
 	font-size: 12px;
 }
 
+a {
+	text-decoration: none;
+}
+
 .formation-block {
 	background-color: none;
 	position: fixed;
 	right: 5%;
 	top: 10%;
+	z-index: 99;
 }
 
 .card {
-	background-color: #ebf5ee4f;
+	background-color: #ebf5eea4;
 	border-radius: 15px;
 	color: #76C893;
 	margin: 5px;
@@ -50,6 +55,12 @@ h4 {
 .card p {
 	color: #a3dbb7;
 	font-size: 12px;
+}
+
+.card:hover {
+	background-color: #76C893;
+	color: white;
+	opacity: 1;
 }
 
 .main-block {
@@ -75,12 +86,16 @@ h4 {
 	align-items: center;
 	background-color: white;
 	bottom: 0;
-	color: #168AAD;
 	height: 50px;
 	letter-spacing: 8px;
 	position: fixed;
 	text-align: center;
+	vertical-align: middle;
 	width: 100%;
+}
+
+.arrow-block a {
+	color: #168AAD;
 }
 
 video {
