--- a/technologie.css
+++ b/technologie.css
@@ -5,6 +5,59 @@ html{
     color: #EDF7FC;
 	height: 100%;
 }
+nav{
+    background-color: #168AAD;
+    display:flex;
+    flex-wrap:wrap;
+    justify-content: center;
+    align-items: center;
+    border-bottom: 5px solid #EDF7FC;
+}
+nav h1{
+    color: #EDF7FC;
+    font-family: 'Playfair Display', serif;
+    font-size: 30px;
+}
+nav .onglets{
+    margin-top: 3px;
+    margin-left: 300px;
+}
+nav .onglets a{
+    text-decoration: none;
+    color: #EDF7FC;
+    margin-right: 10px;
+    border-bottom: 1px solid #168AAD;
+    padding-bottom: 5px;
+}
+
+footer{
+    margin-top: 40px;
+    border-top: 5px solid #EDF7FC;
+    background-color: #168AAD;
+    color: #EDF7FC;
+    padding: 30px 100px;;
+}
+footer h1{
+    font-family: 'Playfair Display', serif;
+    border-bottom: 1px solid white;
+    width: 20%;
+    padding-bottom: 5px;
+}
+footer .services{
+    margin-top: -10px;
+    display:flex;
+    flex-wrap:wrap;
+}
+footer .services .service{
+    margin-right: 30px;
+}
+footer .services .service p{
+    max-width: 300px;
+}
+footer #contact{
+    color: rgb(181, 181, 181);
+}
+
 body{
     margin: 0px;
     padding: 0px;
@@ -15,7 +68,7 @@ header{
     display: flex;
     flex-direction: column;
     align-items: center;
-    background: url('https://i.ibb.co/4d8CYtM/background-header.jpg');
+    background: url('./img/john-liberto-speac9.jpg');
     background-size: cover;
     color: #fff;
     padding: 40px;
@@ -57,7 +110,7 @@ header button{
 .main .content .card .left{
    flex: 0 0 30%;
    padding: 20px;
-   background-color:black;
+   background-color:#76C893;
    color:#fff;
 }
 .main .content .card .right img{
@@ -65,6 +118,18 @@ header button{
     width: 400px;
     margin-top: 5px;
 }
+
+.main .content .card .right{
+    flex: 0 0 30%;
+    padding: 20px;
+    background-color:#76C893;
+    color: #fff;
+ }
+ .main .content .card .left img{
+     height:300px;
+     width: 400px;
+     margin-top: 5px;
+ }
 
 
 @media screen and (max-width:680px){
