--- a/css/courDuSoir.css
+++ b/css/courDuSoir.css
@@ -7,6 +7,7 @@
 
 html {
     font-family: 'dosis', sans-serif;
+    color: #EDF7FC;
 }
 
 .container {
@@ -17,6 +18,50 @@ body {
 
 }
 
-h1 {
+.cont2{
+    display: flex;
+
+}
+
+.pict{
+    display: flex;
+}
+
+h2 h1 {
     font-family: 'Otomanopee One', sans-serif;
+}
+
+select{
+    background-color: #D9ED92;
+}
+
+span {
+
+    border: 1px;
+    background-color:#D9ED92 ;
+    color: #76C893 ;
+    font-weight: bold;
+}
+
+button{
+    background-color: #76C893;
+}
+
+.box1 {
+    background-color: #168AAD;
+    grid-column: 1 ;
+    grid-row: 1 / 4;
+}
+.box2 {
+    grid-column: 3 ;
+    grid-row: 1 / 3;
+}
+.box3 {
+    background-color: #168AAD;
+    grid-column: 2 ;
+    grid-row: 1 ;
+}
+
+.pictuR .title .cont2{
+    background-color: #D9ED92;
 }
