--- a/css/courDuSoir.css
+++ b/css/courDuSoir.css
@@ -10,16 +10,27 @@ html {
     color: #EDF7FC;
 }
 
+.wrapper{
+
+}
 .container {
     background-color: #168AAD;
+    padding: 10px;
+    margin-bottom: 10px;
 }
 
-body {
-
+body{
+    margin: 15px;
+    padding: 0;
+    background-color: white;
+    display: grid;
+    grid-template-rows: 10% 45% 45%;
 }
 
 .cont2{
     display: flex;
+    background-color: #D9ED92;
+
 
 }
 
@@ -29,6 +40,7 @@ body {
 
 h2 h1 {
     font-family: 'Otomanopee One', sans-serif;
+    font-weight: bolder;
 }
 
 select{
@@ -38,9 +50,10 @@ select{
 span {
 
     border: 1px;
-    background-color:#D9ED92 ;
-    color: #76C893 ;
+    background-color: #76C893 ;
+    color: #168AAD ;
     font-weight: bold;
+    padding: 10px;
 }
 
 button{
@@ -51,17 +64,41 @@ button{
     background-color: #168AAD;
     grid-column: 1 ;
     grid-row: 1 / 4;
+    margin-bottom: 10px;
+    padding: 10px;
 }
 .box2 {
     grid-column: 3 ;
     grid-row: 1 / 3;
+    padding: 10px;
+    margin-bottom: 10px;
+    background-color: #EDF7FC;
 }
 .box3 {
     background-color: #168AAD;
     grid-column: 2 ;
     grid-row: 1 ;
+    padding: 10px;
 }
 
 .pictuR .title .cont2{
     background-color: #D9ED92;
+}
+.pictuR{
+    margin-top: 10px;
+
+}
+
+.cont2{
+    color: #168AAD;
+    padding: 10px;
+}
+
+img{
+    width: 300px;
+    height: 300px;
+}
+
+.cyb{
+    color: #168AAD;
 }
