--- a/technologie.css
+++ b/technologie.css
@@ -1,3 +1,52 @@
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&display=swap');
 html{
@@ -9,15 +58,32 @@ nav{
     background-color: #168AAD;
     display:flex;
     flex-wrap:wrap;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     border-bottom: 5px solid #EDF7FC;
+    width:100%;
+    height:70px;
+    position: relative;
+}
+.logo{
+    display:flex;
+    align-items: center;
+}
+nav img{
+    width:40px;
+    padding-top:5px ;
+    filter:brightness(500%);
 }
 nav h1{
     color: #EDF7FC;
     font-family: 'Playfair Display', serif;
     font-size: 30px;
+    cursor:pointer;
 }
+nav .logo:hover{
+    animation : bounce 1s  ;
+}
+
 nav .onglets{
     margin-top: 3px;
     margin-left: 300px;
@@ -28,26 +94,35 @@ nav .onglets a{
     margin-right: 10px;
     border-bottom: 1px solid #168AAD;
     padding-bottom: 5px;
+    font-family: 'Otomanopee One', sans-serif;
+
+}
+nav .onglets a:hover{
+    color:#0c4050;
+}
+.programmes:hover .sousMenu{
+    display:block;
+    position:absolute;
+    top:76%;
+    left:65%;
+    z-index: 1;
+    background: #168AAD;
+    color:#fff;
+}
+.sousMenu{
+    display:none;
+
+}
+.sousMenu:hover{
+    display:block;
+}
+.sousMenu li{
+    margin:20px;
+}
+.sousMenu li:hover{
+    color:#0c4050;
 }
 
-footer{
-    margin-top: 40px;
-    border-top: 5px solid #EDF7FC;
-    background-color: #168AAD;
-    color: #EDF7FC;
-    padding: 30px 100px;;
-}
-footer h1{
-    font-family: 'Playfair Display', serif;
-    border-bottom: 1px solid white;
-    width: 20%;
-    padding-bottom: 5px;
-}
-footer .services{
-    margin-top: -10px;
-    display:flex;
-    flex-wrap:wrap;
-}
 footer .services .service{
     margin-right: 30px;
 }
@@ -58,49 +133,125 @@ footer #contact{
     color: rgb(181, 181, 181);
 }
 
-body{
-    margin: 0px;
-    padding: 0px;
-    font-family: 'Montserrat', sans-serif;
+@keyframes bounce {
+    0% { transform: scale(1) translateY(0); }
+    10% { transform: scale(1.2, 0.6); }
+    30% { transform: scale(0.8, 1.1) translateY(-5px); }
+    50% { transform: scale(1) translateY(0); }
+    100% { transform: translateY(0); }
 }
 
-header{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background: url('./img/john-liberto-speac9.jpg');
-    background-size: cover;
-    color: #fff;
-    padding: 40px;
+footer{
+    
+
+    background-color: #168AAD;
+    color: #EDF7FC;
+    
+    height:400px;
+    font-family:sans-serif ;
+    position:relative;
+    display:flex;
+    justify-content: space-around;
 }
-header h1{
+footer h1{
     font-family: 'Playfair Display', serif;
-    font-size: 50px;
+    
+    width: 20%;
+    padding-bottom: 5px;
 }
-header h4{
-    margin-top: -20px;
-    font-size: 20px;
+
+.copyright{
+    position:absolute;
+    bottom:10%;
+    display:block;
+    width:100%;
     text-align: center;
-    border-bottom: 1px solid #fff;
 }
-header button{
-    padding: 10px 20px;
-    background-color: #fff;
-    color:#000;
-    border:none;
+
+footer img{
+    width:100px;
+    filter: brightness(500%);
+    padding-top:5px;
+    
+}
+.footerLogo h1{
+    
+}
+
+.footerLogo{
+    display:flex;
+    font-size:4rem;
+    align-items: center;
+    justify-content: center;
+    height:100%
+}
+.block1, .block2, .block3 {
+    width:33%;
+}
+.block2{
+    display:flex;
+    color:#fff;
+    align-items: center;
+    justify-content: center;
+}
+.block2 ul li a{
+    color:white;
+    text-decoration: none;
+    font-size:1rem;
+    
+}
+.block2 ul li{
     margin-bottom: 30px;
-    outline:none;
-    font-size: 20px;
-    font-family: 'Playfair Display', serif;
-    cursor: pointer;
+}
+.block2 ul li a:hover{
+    color:#0c4050;
+}
+
+.block3{
+    display:flex;
+    color:#fff;
+    align-items: center;
+    justify-content: center;
+}
+.block3 ul li{
+    color:white;
+    text-decoration: none;
+    font-size:1rem;
+    
+}
+.block3 ul li{
+    margin-bottom: 30px;
+}
+.block3 ul li a:hover{
+    color:#0c4050;
+}
+
+@keyframes bounce {
+    0% { transform: scale(1) translateY(0); }
+    10% { transform: scale(1.2, 0.6); }
+    30% { transform: scale(0.8, 1.1) translateY(-5px); }
+    50% { transform: scale(1) translateY(0); }
+    100% { transform: translateY(0); }
 }
 
 .main{
     margin-top: 40px;
     display: flex;
-    flex-direction: column;
+    justify-content: space-between;
     align-items: center;
 }
+
+.program{
+    font-size: 50px,
+}
+
+.content{
+    display: flex;
+
+    justify-content: space-around;
+    align-items: center;
+}
+
 .main .content .card{
     display: flex;
     flex-wrap: wrap;
