--- a/css/courDuSoir.css
+++ b/css/courDuSoir.css
@@ -4,51 +4,123 @@
  D9ED92 jaune
  EDF7FC gris
  */
-
+/* page */
 html {
     font-family: 'dosis', sans-serif;
     color: #EDF7FC;
-}
-
-.wrapper{
-
-}
-.container {
-    background-color: #168AAD;
-    padding: 10px;
-    margin-bottom: 10px;
 }
 
 body{
     margin: 15px;
     padding: 0;
     background-color: white;
+}
+
+
+.wrapper{
     display: grid;
-    grid-template-rows: 10% 45% 45%;
+    grid-template-rows: auto;
+    grid-area: "a" "b" "c" "d" "e" "f";
 }
 
-.cont2{
-    display: flex;
-    background-color: #D9ED92;
-
-
-}
-
-.pict{
-    display: flex;
-}
-
-h2 h1 {
+.titre0{
+    grid-area: "a";
+    color: #168AAD;
+    font-size: 30px;
     font-family: 'Otomanopee One', sans-serif;
     font-weight: bolder;
+    justify-self: center;
 }
 
-select{
+/* box */
+
+.box0 {
+    grid-area: "b";
+    background-color: #168AAD;
+    margin-bottom: 10px;
+}
+
+.box1 {
+    grid-area: "c";
+    background-color: #168AAD;
+    margin-bottom: 10px;
+
+    display: grid;
+    grid-template-columns: 60% 40%;
+    grid-template-rows: auto;
+    grid-area: "aa aa"
+                "ba bb";
+}
+
+.box2 {
+    grid-area: "d";
+    margin-bottom: 10px;
+    background-color: #EDF7FC;
+}
+
+.box3 {
+    grid-area: "e";
+    background-color: #168AAD;
+    margin-bottom: 10px;
+}
+
+.box4 {
+    grid-area: "f";
+    background-color: #168AAD;
+    margin-bottom: 10px;
+}
+
+.box1 h1 .box3 h1{
+    font-family: 'Otomanopee One', sans-serif;
+    font-weight: bolder;
+    color: #168AAD;
+    font-size: 25px;
+}
+
+.box2 h1 {
+    font-family: 'Otomanopee One', sans-serif;
+    font-weight: bolder;
+    color: #168AAD;
+    font-size: 25px;
+}
+
+box4 h2 {
+    font-family: 'Otomanopee One', sans-serif;
+    font-weight: bolder;
+    color: #EDF7FC;
+    font-size: 20px;
+}
+/* sous box*/
+
+pictuR .title .cont2{
     background-color: #D9ED92;
+}
+
+.pictuR{
+    margin-top: 10px;
+}
+
+.box1 .title {
+
+ }
+
+.box1 .pictuR{
+
+}
+
+
+/* assets*/
+.cont2{
+    background-color: #D9ED92;
+    color: #168AAD;
+    padding: 10px;
+}
+
+.title{
+    grid-area: "1";
 }
 
 span {
-
     border: 1px;
     background-color: #76C893 ;
     color: #168AAD ;
@@ -56,42 +128,8 @@ span {
     padding: 10px;
 }
 
-button{
-    background-color: #76C893;
-}
-
-.box1 {
-    background-color: #168AAD;
-    grid-column: 1 ;
-    grid-row: 1 / 4;
-    margin-bottom: 10px;
-    padding: 10px;
-}
-.box2 {
-    grid-column: 3 ;
-    grid-row: 1 / 3;
-    padding: 10px;
-    margin-bottom: 10px;
-    background-color: #EDF7FC;
-}
-.box3 {
-    background-color: #168AAD;
-    grid-column: 2 ;
-    grid-row: 1 ;
-    padding: 10px;
-}
-
-.pictuR .title .cont2{
-    background-color: #D9ED92;
-}
-.pictuR{
+.pict{
     margin-top: 10px;
-
-}
-
-.cont2{
-    color: #168AAD;
-    padding: 10px;
 }
 
 img{
@@ -102,3 +140,12 @@ img{
 .cyb{
     color: #168AAD;
 }
+
+select{
+    background-color: #D9ED92;
+}
+
+button{
+    background-color: #76C893;
+}
+
