--- a/HEADER_FOOTER.css
+++ b/HEADER_FOOTER.css
@@ -6,7 +6,7 @@ nav{
     align-items: center;
     width:100%;
     height:70px;
-    position: relative;
+    position: static;
 }
 .logo{
     display:flex;
