--- a/technologie.css
+++ b/technologie.css
@@ -230,6 +230,16 @@ footer img{
     100% { transform: translateY(0); }
 }
 
+.top_head{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background: url('https://i.ibb.co/4d8CYtM/background-header.jpg');
+    background-size: cover;
+    color: #fff;
+    padding: 40px;
+}
+
 .main{
     margin-top: 40px;
     display: flex;
