--- a/technologie.css
+++ b/technologie.css
@@ -230,12 +230,23 @@ footer img{
     100% { transform: translateY(0); }
 }
 
+.top_head{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background: url('./img/john-liberto-speac9.jpg');
+    background-size: cover;
+    color: #fff;
+    padding: 40px;
+}
+
 .main{
     margin-top: 40px;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
+
 
 .program{
     font-size: 50px,
